--- a/package.json
+++ b/package.json
@@ -18,12 +18,20 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "fb-serve": "npm run build && firebase emulators:start --only functions",
+    "fb-shell": "npm run build && firebase functions:shell",
+    "fb-start": "npm run shell",
+    "deploy": "firebase deploy --only functions",
+    "logs": "firebase functions:log",
+    "emulators": "tsc-watch --onFirstSuccess 'firebase emulators:start --only firestore,functions'"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "firebase-admin": "^9.11.1",
+    "firebase-functions": "^3.15.4",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
@@ -46,6 +54,7 @@
     "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
+    "tsc-watch": "^4.5.0",
     "tsconfig-paths": "^3.10.1",
     "typescript": "^4.3.5"
   },
@@ -65,5 +74,6 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-  }
+  },
+  "main": "dist/index.js"
 }
