--- a/firebase.json
+++ b/firebase.json
@@ -8,7 +8,8 @@
       "npm --prefix \"$RESOURCE_DIR\" run lint",
       "npm --prefix \"$RESOURCE_DIR\" run build"
     ],
-    "source": "."
+    "source": ".",
+    "runtime": "nodejs14"
   },
   "emulators": {
     "functions": {
